<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Talent Store</string>
    <string name="search">Search</string>
    <string name="enter_name">Product Name/Code</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="offers">Offers</string>
    <string name="about_us">About Us</string>
    <string name="my_account">My Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="or_login_with">Or login with</string>
    <string name="new_user">Don\'t have an account?</string>
    <string name="create">Create</string>
    <string name="skip">Skip</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="mobile_number_2">Another Mobile Number</string>
    <string name="address">Address</string>
    <string name="address_2">Another Address</string>
    <string name="gender">Gender</string>
    <string name="register">Register</string>
    <string name="filter_by_category">Filter by Category</string>
    <string name="filter_by_age_range">Filter by Age Range</string>
    <string name="filter_by_gender">Filter by Gender</string>
    <string name="filter_by_intelligence">Filter by Intelligence</string>
    <string name="filter_by_number_of_players">Filter by Number of Players</string>
    <string name="minimum_price">Minimum price</string>
    <string name="maximum_price">Maximum price</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="language">Language</string>
    <string name="me">Me</string>
    <string name="my_orders">My Orders</string>
    <string name="my_favourites">My Favourites</string>
    <string name="my_reviews">My Reviews</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="select_your_language">Select your language</string>
    <string name="cart">Cart</string>
    <string name="delete">Delete</string>
    <string name="total">Total:</string>
    <string name="place_order">Place an Order</string>
    <string name="amount">Amount</string>
    <string name="egp">EGP</string>
    <string name="find_us">Find us on</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="results">Results</string>
    <string name="no_news">Sorry, We don\'t have any news for you right now.</string>
    <string name="no_offers">Sorry, We don\'t have any offers for you right now.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="you_need_to_login_first">You need to login first.</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="contact_us">Contact US</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="name">Name</string>
    <string name="code">Code:</string>
    <string name="myReviews">Reviews</string>
    <string name="source">Source:</string>
    <string name="talent_store">Talent Store</string>
    <string name="times">times</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="title_placeholder">This is a placeholder for this title. Did you like it?</string>
    <string name="branches">Branches</string>
    <string name="no_items_in_your_cart">There is no items in your cart.</string>
    <string name="colon">:</string>
    <string name="discount">Discount:</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="confirmation_code">Confirmation Code</string>
    <string name="confirm">Confirm</string>
    <string name="on">On</string>
    <string name="by">By</string>
    <string name="product_reviews">Product Reviews</string>
    <string name="title">Title</string>
    <string name="your_review">Your Review</string>
    <string name="add">Add</string>
    <string name="add_review">Add Review</string>
    <string name="start_shopping">Start shopping</string>
    <string name="empty_favourites">You haven\'t favourite any product, yet</string>
    <string name="no_reviews">You did not put any reviews, yet.</string>
    <string name="remove_from_cart">Remove from cart</string>
    <string name="final_price">Final price:</string>
    <string name="confirmation_note">One of our team will contact you to confirm delivery date and time</string>
    <string name="delivery_address">Delivery address</string>
    <string name="notes">Notes</string>
    <string name="no_filtered_products">Sorry, no products found.</string>
    <string name="something_went_wrong">Something went wrong. please try again.</string>
    <string name="no_internet_connection">Check your internet connection and try again.</string>
    <string name="delivery_notes">Delivery notes</string>
    <string name="order_number">Order number:</string>
    <string name="order_details">Order details</string>
    <string name="no_orders">You haven\'t order any products yet.</string>
    <string name="information_updated">Information updated.</string>
    <string name="check_your_credentials">Check your credentials and try again.</string>
    <string name="out_of_stock">Unfortunately, this product is out of stock right now.</string>
    <string name="thank_you">Thank you.</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="enter_the_right_code">Enter the right code</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="password_length_warning">Password must be more than 6 characters</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="password_does_not_match">Password doesn\'t match</string>
    <string name="password_changed_successfully">Password changed successfully.</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_valid_email_address">Enter valid email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_phone_number">Enter your mobile number</string>
    <string name="enter_valid_phone_number">Enter valid mobile number</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="welcome">Welcome</string>
    <string name="added_to_favourites">Added to favorites.</string>
    <string name="removed_from_favourites">Removed from favourites.</string>
    <string name="added_to_cart">Added to cart.</string>
    <string name="removed_from_cart">Removed from cart.</string>
    <string name="no_reviews_for_this_product">No reviews for this product.</string>
    <string name="no_youtube_link">Sorry, no youtube link.</string>
    <string name="no_facebook_link">Sorry, no facebook link.</string>
    <string name="add_contact_number">Add contact number</string>
    <string name="contact_number">Contact number</string>
    <string name="add_delivery_address">Add delivery address</string>
    <string name="order_has_been_made">Your order has been made. we will contact you soon.</string>
    <string name="facebook_login_canceled">Facebook login canceled.</string>
    <string name="message_sent_successfully">Message sent successfully, thank you for contacting with us.</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="added_to_user_favourites">Added to user favourites</string>

    <string name="facebook_app_id">1560249057445125</string>
    <string name="fb_login_protocol_scheme">fb1560249057445125</string>
    <string name="some_text">Some Text</string>
    <string name="reviews">Reviews</string>
    <string name="edit_text_error">This field is required</string>
    <string name="google_client_Id" translatable="false">1059701505989-7usq8b7posmt9kaq2gq982f22888ca0j.apps.googleusercontent.com</string>
    <string name="google_client_secret" translatable="false">CWgykg3KFBBeKjZ3TWvipRMP</string>

</resources>
