<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_dialog_main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tv_filter_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/filter"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/category_filter_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_filter_title"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:prompt="@string/filter_by_category" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/category_filter_spinner"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#e0e0e0" />


    <Spinner
        android:id="@+id/age_filter_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:prompt="@string/filter_by_age_range" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/age_filter_spinner"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#e0e0e0" />

    <Spinner
        android:id="@+id/gender_filter_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:entries="@array/gender_array"
        android:prompt="@string/filter_by_gender" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/gender_filter_spinner"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#e0e0e0" />

    <Spinner
        android:id="@+id/intelligence_filter_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view3"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:prompt="@string/filter_by_intelligence" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/intelligence_filter_spinner"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#e0e0e0" />

    <Spinner
        android:id="@+id/players_number_filter_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view4"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:prompt="@string/filter_by_number_of_players" />

    <View
        android:id="@+id/view5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/players_number_filter_spinner"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="#e0e0e0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view5"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_min_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/minimum_price"
            android:inputType="number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_max_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/maximum_price"
            android:inputType="number"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/ripple_effect_button"
        android:enabled="false"
        android:text="@string/filter"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <FrameLayout
        android:id="@+id/loading_view_filter_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparentColor">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>


</RelativeLayout>